data/derived/sp14/progs/unify/prog0720.ml.out
Characters 375-407:
  (eval(a, x, y) *. eval(a, x, y)) + (eval(b, x, y) *. eval(c, x, y));;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
